--- a/app/src/main/res/layout/custom_todo_layout.xml
+++ b/app/src/main/res/layout/custom_todo_layout.xml
@@ -3,62 +3,89 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#ccc"
-    android:padding="10dp">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/toDoCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="5dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
+        app:cardElevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+            <CheckBox
+                android:id="@+id/toDoCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/todo_list_item_checkbox_color"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:srcCompat="@drawable/ic_launcher_background" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/TODOtextTitle"
-                android:layout_width="0dp"
+                android:id="@+id/toDoGroupName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="Sample Card Title"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                android:layout_marginTop="4dp"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/toDoTitle"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/toDoCheckBox"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textDesc" />
+                tools:text="Group name" />
 
             <TextView
-                android:id="@+id/textDesc"
+                android:id="@+id/toDoTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="Sample Card Descriptions"
-                android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                android:layout_marginTop="5dp"
+                android:textAllCaps="false"
+                android:textColor="@color/text_on_background"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/toDoDescription"
+                app:layout_constraintEnd_toStartOf="@+id/toDoDueDate"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/toDoCheckBox"
+                app:layout_constraintTop_toBottomOf="@+id/toDoGroupName"
+                tools:text="Sample Card Title" />
+
+            <TextView
+                android:id="@+id/toDoDueDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="7dp"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/toDoTitle"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TODOtextTitle"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/toDoTitle"
+                app:layout_constraintTop_toTopOf="@+id/toDoTitle"
+                tools:text="Nov 20, 2023" />
+
+            <TextView
+                android:id="@+id/toDoDescription"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="7dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/toDoCheckBox"
+                app:layout_constraintTop_toBottomOf="@+id/toDoTitle"
+                tools:text="Sample Card Description" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
