--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,10 @@
     <color name="ai_msg">#EB5552</color>
     <color name="text_on_background">#FFFFFF</color>
     <color name="write_msg_background">#1F1F21</color>
+
+    <!-- Colors for To Do List Items -->
+    <color name="todo_list_item_color_1">@color/pastel_orange_dark</color>
+    <color name="todo_list_item_color_2">@color/pastel_lilac_dark</color>
+    <color name="todo_list_item_color_3">@color/pastel_red_var_dark</color>
+    <color name="todo_list_item_checkbox_color">@color/pastel_orange</color>
 </resources>
