--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,10 @@
     <group android:checkableBehavior="single"
         android:id="@+id/nav_group">
         <item
+            android:id="@+id/nav_add_friends"
+            android:icon="@drawable/baseline_person_add_24"
+            android:title="@string/add_friends" />
+        <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/baseline_calendar_month_24"
             android:title="@string/calendar" />
@@ -16,6 +20,6 @@
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_menu_logout"
-            android:title="Log out" />
+            android:title="@string/log_out" />
     </group>
 </menu>
