--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -46,4 +46,10 @@
         android:name="com.example.plantastic.ui.profile.ProfileFragment"
         android:label="@string/nav_profile"
         tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/nav_add_friends"
+        android:name="com.example.plantastic.ui.friends.AddFriendsFragment"
+        android:label="@string/nav_add_friends"
+        tools:layout="@layout/fragment_add_friends" />
 </navigation>
