--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <CalendarView
         android:id="@+id/calendarView"
@@ -13,30 +13,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp" />
 
-    <EditText
-        android:id="@+id/editTextEventName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@id/calendarView"
-        android:layout_marginTop="16dp"
-        android:hint="Enter Event Name"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
-
-    <Button
-        android:id="@+id/buttonSaveEvent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextEventName"
-        android:layout_marginTop="16dp"
-        android:layout_centerHorizontal="true"
-        android:text="Save Event"/>
-
-    <ListView
-        android:id="@+id/listViewEvents"
+        android:id="@+id/calendarRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonSaveEvent"
-        android:layout_marginTop="16dp"/>
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </RelativeLayout>
