--- a/app/src/main/res/layout/dialog_chat_add_new.xml
+++ b/app/src/main/res/layout/dialog_chat_add_new.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +24,8 @@
             android:layout_height="50dp"
             android:src="@drawable/baseline_deck_24"
             android:background="@drawable/rounded_borders_50dp"
-            android:backgroundTint="@color/pastel_violet"/>
+            android:backgroundTint="@color/pastel_violet"
+            android:contentDescription="@string/content_desc_add_new_event" />
 
         <Space
             android:layout_width="wrap_content"
@@ -38,7 +38,8 @@
             android:layout_height="50dp"
             android:src="@drawable/baseline_list_alt_24"
             android:background="@drawable/rounded_borders_50dp"
-            android:backgroundTint="@color/pastel_coral"/>
+            android:backgroundTint="@color/pastel_coral"
+            android:contentDescription="@string/content_desc_add_new_todo_item" />
 
         <Space
             android:layout_width="wrap_content"
@@ -49,9 +50,10 @@
             android:id="@+id/addExpenseAddDialog"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/baseline_account_balance_wallet_24"
+            android:src="@drawable/receipt_text_plus_outline"
             android:background="@drawable/rounded_borders_50dp"
-            android:backgroundTint="@color/pastel_green_dark"/>
+            android:backgroundTint="@color/pastel_green_dark"
+            android:contentDescription="@string/content_desc_add_new_expenses" />
 
         <Space
             android:layout_width="wrap_content"
@@ -64,7 +66,8 @@
             android:layout_height="50dp"
             android:src="@drawable/scale_balance"
             android:background="@drawable/rounded_borders_50dp"
-            android:backgroundTint="@color/pastel_sky_blue_dark"/>
+            android:backgroundTint="@color/pastel_sky_blue_dark"
+            android:contentDescription="@string/content_desc_settle_balances" />
 
         <Space
             android:layout_width="wrap_content"
